@@ -1,5 +1,11 @@
 2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03628] Re: Error occured while reset
+	* file.c (doExternal): bufp = NULL, return 1
+		(uncompress_stream): tempfname fileToDelete
+
+2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03626] Re: relative URL
 	* url.c (parseURL2): copy if scheme is local or local-cgi
 
